<resources>
    <string name="app_name">CRUD</string>
    <string name="crud_patient">Patient</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="speciality">Speciality</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="new_label">New</string>
    <string name="patients">Patients</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_age">Patient Age</string>
    <string name="patient_gender">Patient Gender</string>
    <string name="crud_doctor">Doctor</string>
    <string name="doctors">Doctors</string>
    <string name="crud_speciality">Speciality</string>
    <string name="specialities">Specialities</string>
    <string name="crud_scheduling">Scheduling</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="schedule">Schedule</string>
    <string name="as">as</string>
</resources>